--- a/Choose_Drug.ipynb
+++ b/Choose_Drug.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -126,7 +125,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"drug200.csv\", delimiter=\",\")\n",
-    "df[0:5]\n"
+    "df[0:5]"
    ]
   },
   {
@@ -268,6 +267,7 @@
    ],
    "source": [
     "from sklearn import preprocessing\n",
+    "\n",
     "le_sex = preprocessing.LabelEncoder()\n",
     "le_sex.fit(['F', 'M'])\n",
     "X[:,1] = le_sex.transform(X[:,1])\n",
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- shaping of X_trainset and y_trainset"
+    "- shaping of X_trainset & y_trainset"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- shaping of X_testset and y_testset"
+    "- shaping of X_testset & y_testset"
    ]
   },
   {
@@ -782,6 +782,8 @@
     }
    ],
    "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
     "drugTree = DecisionTreeClassifier(criterion='entropy', max_depth=4)\n",
     "drugTree"
    ]
